--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
             </path></svg>
         </a>
-        <h3>Versi 1.6 || By Web - NexdyMC || copyright &copyNexdyProjek 2024</h3>
+        <h3>By Web - NexdyMC || &copyNexdyProjek 2024</h3>
     </footer>
     <script src="script.js"></script>
 </body>
