Update bug versi

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </a>
             <br>
             <ol>
-                <h2> By Web - NexdyMC </h2>
+                <h2> By Web - NexdyMC || V1.7 </h2>
                 <h2>Copyright &copyNexdyProjek 2024</h2>
             </ol>
         </ul>
